[ADDED]: Added Middlewares, API for Feedback post functionality

--- a/views/layouts/partials/feedbacks.ejs
+++ b/views/layouts/partials/feedbacks.ejs
@@ -2,7 +2,7 @@
   <div class="maincontent feedback">
     <h1>Recent Feedback</h1>
 
-    <div class="feedback-items">
+    <div class="feedback-items" id="feedbacks">
 
       <% feedbacks.forEach(function (feedback) { %>
         <div class="feedback-item item-list media-list">
